--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,31 @@
 body {
-  display flex;
-  justify-content center;
-  align-items center;
-  height 100vh;
-  margin 0;
-  background-color #f2f2f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: #f2f2f2;
 }
 
 .slider-container {
-  position relative;
-  width calc(2  3  100vh);
-  height 100vh;
-  overflow hidden;
+  position: relative;
+  width: 1280px;
+  height: 720px;
+  overflow: hidden;
 }
 
 .before-image,
 .after-image {
-  position absolute;
-  width 100%;
-  height 100%;
-  object-fit cover;
-  transition 0.4s;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.4s;
 }
 
 .before-image {
-  background-position center;
-  background-size cover;
-  background-repeat no-repeat;
-  width 50%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 50%;
 }
