--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
 .before-image,
 .after-image {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width:1280px;
+  height: 720px;
   object-fit: cover;
   transition: 0.4s;
 }
