--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,16 @@ body {
 
 .slider-container {
   position: relative;
-  width: 1280px;
-  height: 720px;
+  width: 80vw;
+  height: calc(80vw * 9 / 16);
   overflow: hidden;
 }
 
 .before-image,
 .after-image {
   position: absolute;
-  width:1280px;
-  height: 720px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   transition: 0.4s;
 }
