--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,22 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: 0.4s;
 }
 
 .before-image {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 50%;
+  width: 100%;
+  z-index: 2;
+  transition: width 0.1s;
+}
+
+.slider-bar {
+  position: absolute;
+  width: 4px;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 3;
+  transition: left 0.1s;
 }
