--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 
 .slider-bar {
   position: absolute;
-  width: 4px;
+  width: 14%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 3;
