--- a/styles.css
+++ b/styles.css
@@ -28,14 +28,14 @@ body {
   background-repeat: no-repeat;
   width: 100%;
   z-index: 2;
-  transition: width 0.1s;
+  transition: width 0.01s;
 }
 
 .slider-bar {
   position: absolute;
-  width: 14%;
+  width: 40px;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 3;
-  transition: left 0.1s;
+  transition: left 0.01s;
 }
