--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,8 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
-  z-index: 2;
-  transition: width 0.1s;
+  clip-path: inset(0 50% 0 0);
+  transition: clip-path 0.1s;
 }
 
 .slider-bar {
@@ -36,6 +35,6 @@ body {
   width: 4px;
   height: 100%;
   background-color: rgba(0, 0, 0, 1;
-  z-index: 3;
+  z-index: 2;
   transition: left 0.1s;
 }
