--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ body {
 
 .slider-container {
   position: relative;
-  width: 100vw;
-  height: calc(100vw * 9 / 16);
+  width: 50vw;
+  height: calc(50vw * 9 / 16);
   overflow: hidden;
 }
 
@@ -34,7 +34,8 @@ body {
   position: absolute;
   width: 4px;
   height: 100%;
-  background-color: rgba(0, 0, 0, 1;
+  background-color: rgba(0, 0, 0, 1);
   z-index: 2;
+  left: 50%;
   transition: left 0.1s;
 }
