--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f2f2f2;
+  background-color: #000000;
 }
 
 .slider-container {
@@ -34,7 +34,7 @@ body {
   position: absolute;
   width: 4px;
   height: 100%;
-  background-color: rgba(0, 0, 0, 1);
+  background-color: rgba(255, 255, 255, 0.7);
   z-index: 2;
   left: 50%;
   transition: left 0.1s;
