--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #000000;
+  background-color: transparent;
 }
 
 .slider-container {
   position: relative;
-  width: 50vw;
-  height: calc(50vw * 9 / 16);
+  width: 100vw;
+  height: calc(100vw * 9 / 16);
   overflow: hidden;
 }
 
@@ -22,11 +22,16 @@ body {
   object-fit: cover;
 }
 
+.after-image {
+  z-index: 1;
+}
+
 .before-image {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   clip-path: inset(0 50% 0 0);
+  z-index: 2;
   transition: clip-path 0.1s;
 }
 
@@ -35,7 +40,7 @@ body {
   width: 4px;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
-  z-index: 2;
+  z-index: 3;
   left: 50%;
   transition: left 0.1s;
 }
