--- a/style.css
+++ b/style.css
@@ -55,10 +55,12 @@ h1 {
 
 .slider-bar {
   position: absolute;
-  top: 0;
+  width: 4px;
   height: 100%;
-  width: 2px;
-  background: #fff;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 3;
+  left: 50%;
+  transition: left 0.1s;
 }
 
 .tooltip {
