--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   text-align: center;
   background-color: #000;
 }
@@ -46,7 +48,6 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none;
 }
 
 .handle {
@@ -57,10 +58,6 @@ h1 {
   position: absolute;
   top: 0;
   height: 100%;
-  width: 4px;
+  width: 2px;
   background: #fff;
-}
-
-.tooltip {
-  display: none;
 }
