--- a/style.css
+++ b/style.css
@@ -1,42 +1,61 @@
-body {
-     background-color: black;
+body, html {
+  height: 100%;
+  margin: 0;
+  background-color: black;
 }
- .image-comparison {
-     position: relative;
-     display: inline-block;
-     overflow: hidden;
-     border-radius: 10px;
-     box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+
+.image-comparison {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 1rem;
+  box-sizing: border-box;
+  color: rgba(255, 255, 255, 0.9);
 }
- .photo-name, .photo-description {
-     margin: 0;
-     color: rgba(255, 255, 255, 0.9);
+
+.images-container {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 }
- .before-image, .after-image {
-     max-width: 100%;
-     height: auto;
+
+.before-image,
+.after-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
- .after-image {
-     position: absolute;
-     top: 0;
-     left: 0;
-     clip-path: inset(0 50% 0 0);
+
+.after-image {
+  clip-path: inset(0 50% 0 0);
 }
- .slider {
-     position: absolute;
-     top: 0;
-     bottom: 0;
-     left: 50%;
-     width: 2px;
-     background-color: rgba(255, 255, 255, 0.5);
-     cursor: ew-resize;
+
+.slider {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  cursor: ew-resize;
 }
- @media screen and (max-width: 600px) {
-     .photo-name {
-         font-size: 1.2rem;
-    }
-     .photo-description {
-         font-size: 0.9rem;
-    }
+
+@media screen and (max-width: 600px) {
+  .photo-name {
+    font-size: 1.2rem;
+  }
+
+  .photo-description {
+    font-size: 0.9rem;
+  }
 }
- 
