--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,112 @@
-body, html {
-  height: 100%;
-  margin: 0;
-  background-color: black;
+body,
+html {
+	height: 100%;
+	margin: 0;
+	font-family: 'Lato', sans-serif;
+	background-color: black;
 }
 
 .image-comparison {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding: 1rem;
-  box-sizing: border-box;
-  color: rgba(255, 255, 255, 0.9);
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+	padding: 1rem;
+	box-sizing: border-box;
+	color: rgba(255, 255, 255, 0.9);
 }
 
 .images-container {
-  position: relative;
-  display: inline-block;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(255, 0, 0, 1);
+	position: relative;
+	display: inline-block;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	border-radius: 10px;
 }
 
 .before-image,
 .after-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
 }
 
 .after-image {
-  clip-path: inset(0 50% 0 0);
+	clip-path: inset(0 50% 0 0);
+}
+
+.label {
+	position: absolute;
+	top: 1rem;
+	background-color: rgba(255, 255, 255, 0.7);
+	padding: 0.3rem 0.6rem;
+	border-radius: 20px;
+	font-size: 0.8rem;
+	font-weight: bold;
+}
+
+.before-label {
+	left: 1rem;
+}
+
+.after-label {
+	right: 1rem;
 }
 
 .slider {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  width: 2px;
-  background-color: rgba(255, 255, 255, 0.5);
-  cursor: ew-resize;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 50%;
+	width: 4px;
+	background-color: rgba(255, 255, 255, 0.5);
+	cursor: ew-resize;
+}
+
+.slider-circle {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 30px;
+	height: 30px;
+	background-color: rgba(255, 255, 255, 0.7);
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+.slider-arrow {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-top: 5px solid rgba(0, 0, 0, 0.5);
+	transform: translate(-50%, -50%);
+}
+
+.photo-name {
+	font-weight: 700;
+}
+
+.photo-description {
+	font-weight: 300;
 }
 
 @media screen and (max-width: 600px) {
-  .photo-name {
-    font-size: 1.2rem;
-  }
+	.photo-name {
+		font-size: 1.2rem;
+	}
 
-  .photo-description {
-    font-size: 0.9rem;
-  }
+	.photo-description {
+		font-size: 0.9rem;
+	}
 }
