--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,15 @@ body {
 }
 
 .image {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	user-select: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    user-select: none;
 }
+
 
 .before-image {
 	z-index: 1;
