--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body {
 .slider {
 	position: absolute;
 	top: 0;
-	left: 50%;
+	left: calc(50% - 20px);
 	height: 100%;
 	display: flex;
 	flex-direction: column;
