--- a/styles.css
+++ b/styles.css
@@ -46,30 +46,38 @@ body {
 }
 
 .image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    user-select: none;
-}
-
-
-.before-image {
-	z-index: 1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
+	user-select: none;
 }
 
 .slider {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.before-image {
 	position: absolute;
 	top: 0;
-	left: calc(50% - 20px);
+	left: 0;
+	width: 100%;
 	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	object-fit: cover;
+}
+
+.handle {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 40px;
+	height: 100%;
 	cursor: ew-resize;
-	z-index: 2;
 }
 
 .slider-circle {
@@ -93,29 +101,14 @@ body {
 
 .after-image {
 	z-index: 0;
-	clip-path: inset(0 50% 0 0);
 }
 
-.label-container {
+.slider:before {
+	content: '';
 	position: absolute;
-	bottom: 20px;
-}
-
-.label {
-	display: inline-block;
-	background-color: rgba(255, 255, 255, 0.7);
-	border-radius: 10px;
-	padding: 5px 10px;
-	font-size: 14px;
-	font-weight: 400;
-	color: black;
-	user-select: none;
-}
-
-.before-image .label-container {
-	left: 20px;
-}
-
-.after-image .label-container {
-	right: 20px;
+	top: 0;
+	left: 50%;
+	width: 1px;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.8);
 }
