--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,25 @@
 body {
-	font-family: 'Lato', sans-serif;
-	background-color: black;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-	width: 100vw;
-	overflow: hidden;
+    font-family: 'Lato', sans-serif;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .slider-container {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	border-radius: 10px;
-	overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    overflow: hidden;
 }
+
 
 .text-container {
 	text-align: center;
